Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-1042

Can't distinguish between null target and null address on a target

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-0.10
    • proton-0.11.0
    • proton-c
    • None

    Description

      In both cases pn_terminus_get_type() returns PN_UNSPECIFIED. Looking at the source for pn_do_attach() in transport.c, it appears that 'target' is used to hold the target address and if that is not specified (and the target is not a coordinator, it is left as unspecified).

      Attachments

        Issue Links

          Activity

            People

              gsim Gordon Sim
              gsim Gordon Sim
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: