PROTON-1042: Ensure terminus type is correct for a target even if the address is null

(cherry picked from commit 1b1b2e596a974ec4fedf1ca3d985f0d62a730b61)